--- a/_posts/0000-01-02-kshao5.md
+++ b/_posts/0000-01-02-kshao5.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our kshao5's slide!"
 ---
-This is kshao5's slide
-Use the left arrow to go back!This is my awesome slide
+This is my awesome slide
+Use the left arrow to go back!
